--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -26,6 +26,40 @@
             </div>
         </div>
     </nav>
+
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+          {% for message in messages %}
+              <h3> {{message}}</h3>
+          {% endfor %}
+      {% endif %}    
+    {%endwith%}
+
+
+
+    <!-- {% with messages = get_flashed_messages(with_categories=true) %}
+    {%if messages%}
+      {% for category, message in messages%}
+      {% if category == 'error'%}
+      <div class="alert"> 
+        {{message}}
+        <button type="button" class="close" data-dismiss="alert">
+          <span aria-hidden="true">&times;</span>  
+        </button>
+      </div>
+      {% else %}
+      <div class="alert"> 
+        {{message}}
+        <button type="button" class="close" data-dismiss="alert">
+          <span aria-hidden="true">&times;</span>  
+        </button>
+      </div>
+      {% endif %}
+      {% endfor%}
+    {% endif %}
+    {% endwith %} -->
+
+
     <div class="container">
     {% block content%}
     {%endblock%}
