--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -1,32 +1,27 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" type="text/css" href="styling.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title%}
         {%endblock%}
     </title>
-    <!-- <link rel="stylesheet" href="style.css"> -->
   </head>
   <body>
-    <nav class="navbar"> 
-        <!-- <button class="navbar-toggle" type="button" data-toggle = "collapse" data-target="#navbar">
-            <span class="navbar-toggler-icon"> 
-                
-            </span>
-        </button> -->
-
-        <div class="collapse navbar-collapse" id="navbar">
-            <div class="navbar-nav">
+        <div class="navbar" id="navbar">
+            <div class="link_container">
+              {% if user.is_authenticated %}
+              <a class="nav-item nav-link" id="home" href="/">HOME</a>
+              <a class="nav-item nav-link" id="logout" href="/logout">LOGOUT</a>
+                {%else%}
                 <a class="nav-item nav-link" id="login" href="/login">LOGIN</a>
                 <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
-                <a class="nav-item nav-link" id="logout" href="/logout">LOGOUT</a>
-                <a class="nav-item nav-link" id="home" href="/">HOME</a>
+                {%endif%}
+                <a class="nav-item nav-link" id="test" href="/test">Show files</a>
             </div>
         </div>
-    </nav>
-
     {% with messages = get_flashed_messages() %}
       {% if messages %}
           {% for message in messages %}
@@ -34,32 +29,6 @@
           {% endfor %}
       {% endif %}    
     {%endwith%}
-
-
-
-    <!-- {% with messages = get_flashed_messages(with_categories=true) %}
-    {%if messages%}
-      {% for category, message in messages%}
-      {% if category == 'error'%}
-      <div class="alert"> 
-        {{message}}
-        <button type="button" class="close" data-dismiss="alert">
-          <span aria-hidden="true">&times;</span>  
-        </button>
-      </div>
-      {% else %}
-      <div class="alert"> 
-        {{message}}
-        <button type="button" class="close" data-dismiss="alert">
-          <span aria-hidden="true">&times;</span>  
-        </button>
-      </div>
-      {% endif %}
-      {% endfor%}
-    {% endif %}
-    {% endwith %} -->
-
-
     <div class="container">
     {% block content%}
     {%endblock%}
