--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -1,14 +1,14 @@
   <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" type="text/css" href="styling.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title%}
         {%endblock%}
     </title>
-  </head>
+    <link rel="stylesheet" href= "{{ url_for('static',filename='styles/style.css') }}">
+   </head>
   <body>
         <div class="navbar" id="navbar">
             <div class="link_container">
