--- a/website/static/styles/style.css
+++ b/website/static/styles/style.css
@@ -1,3 +1,29 @@
-.navbar{
-    background-color: red;
+.link_container{
+    display: flex;
+    flex-direction: row;
+}
+
+.nav-item{
+    margin: 5px;
+}
+
+/* LOGIN PAGE */
+.wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 40vh;
+    width: 20vw;
+    border: solid black;
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.submit_btn{
+    margin-top: 150px;
+    margin-left: 100px;
+    height: 3vh;
+    width: 4vw;
 }
