Added some type of quiz shit

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -21,6 +21,7 @@
                 <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
                 {%endif%}
                 <a class="nav-item nav-link" id="test" href="/test">Show files</a>
+                <a class="nav-item nav-link" id="delete" href="/delete">Delete</a>
             </div>
         </div>
       
@@ -36,6 +37,6 @@
     {%endblock%}
     </div>
     
-	<!-- <script src="index.js"></script> -->
+    
   </body>
 </html>
