--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -16,12 +16,14 @@
               {% if user.is_authenticated %}
               <a class="nav-item nav-link" id="home" href="/">HOME</a>
               <a class="nav-item nav-link" id="logout" href="/logout">LOGOUT</a>
+              <a class="nav-item" id="quizmaker" href="/quizmaker">MAKE QUIZ</a>
                 {%else%}
                 <a class="nav-item nav-link" id="login" href="/login">LOGIN</a>
                 <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
                 {%endif%}
                 <a class="nav-item nav-link" id="test" href="/test">Show files</a>
                 <a class="nav-item nav-link" id="delete" href="/delete">Delete</a>
+                <a class="nav-item nav-link" id="profile" href="/profile">My profile</a>
             </div>
         </div>
       
