--- a/website/templates/test.html
+++ b/website/templates/test.html
@@ -15,10 +15,33 @@ Test
 {{message3}}
 {{message4}} -->
 
+{% for x in message1 %}
+    {{x.id}}
+    {{x.first_name}}
+    {{x.email}}
+    {{x.password}}
+{%endfor%}
+<br>
+
 {% for x in message2 %}
     {{x.quiz_id}}
     {{x.user_id}}
     {{x.quiz_title}}
     {{x.quiz_description}}
+{%endfor%}
+<br>
+
+{% for x in message3 %}
+    {{x.question_id}}
+    {{x.quiz_id}}
+    {{x.question_text}}
+{%endfor%}
+<br>
+{% for x in message4 %}
+    {{x.option_id}}
+    {{x.question_id}}
+    {{x.option_text}}
+    {{x.is_correct}}
+    <br>
 {%endfor%}
 {%endblock%}
