--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -7,27 +7,33 @@
     <title>{% block title%}
         {%endblock%}
     </title>
+    
+    <link rel="stylesheet" href= "{{ url_for('static',filename='styles/base.css') }}">
     {%block head%}
-   
     {%endblock%}
   </head>
+
+
   <body>
 
-        <div class="navbar" id="navbar">
+        <nav class="navbar" id="navbar">
             <div class="link_container">
+              <p>
               {% if user.is_authenticated %}
               <a class="nav-item nav-link" id="home" href="/">HOME</a>
               <a class="nav-item nav-link" id="logout" href="/logout">LOGOUT</a>
               <a class="nav-item" id="quizmaker" href="/quizmaker">MAKE QUIZ</a>
+              <a class="nav-item nav-link" id="profile" href="/profile/my_profile">My profile</a>
                 {%else%}
                 <a class="nav-item nav-link" id="login" href="/login">LOGIN</a>
                 <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
                 {%endif%}
                 <a class="nav-item nav-link" id="test" href="/test">Show files</a>
                 <a class="nav-item nav-link" id="delete" href="/delete">Delete</a>
-                <a class="nav-item nav-link" id="profile" href="/profile">My profile</a>
+              </p>
             </div>
-        </div>
+        </nav>
+        <hr style="margin-bottom: 2vh;"/>
       
     {% with messages = get_flashed_messages() %}
       {% if messages %}
