--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -9,7 +9,7 @@ HOME
 
 {%block content%}
 
-<h1 align = "center">This is the home page</h1>
+<h1 align = "center">QUIZZHUB</h1>
 
 <div class="wrapper">
     <form method="POST">
