--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -3,44 +3,53 @@
 {%block title%}
 LOGIN page
 {%endblock%}
+
+{%block head%}
+<link rel="stylesheet" href= "{{ url_for('static',filename='styles/sign_up.css') }}">
+
+{%endblock%}
+
 {%block content%}
 
 <form method="post">
-<h3 align ="center">Sign UP</h3>    
+  
 <div class="form-container">
-    <label for="email">Email address </label>
-    <input type="email" 
-    class="input" 
-    id="email" 
-    name = "email" 
-    placeholder="abc@gmail.com"/>
-</div>
-<div class="form-container">
-    <label for="firstName">First Name </label>
-    <input type="text" 
-    class="input" 
-    id="firstName" 
-    name = "firstName" 
-    placeholder="Enter First name"/>
-</div>
-<div class="form-container">
-    <label for="password1">Password</label>
-    <input type="password" 
-    class="input" 
-    id="password1" 
-    name = "password1" 
-    placeholder="Enter password"/>
-</div>
-<div class="form-container">
-    <label for="password2">Confirm password</label>
-    <input type="password" 
-    class="input" 
-    id="password2" 
-    name = "password2" 
-    placeholder=""/>
+    <h1 align ="center">SIGN UP</h3>  
+    <div class="element-container">
+        <label for="email">Email address </label>
+        <input type="email" 
+        class="input" 
+        id="email" 
+        name = "email" 
+        placeholder="abc@gmail.com"/>
+    </div>
+    <div class="element-container">
+        <label for="firstName">First Name </label>
+        <input type="text" 
+        class="input" 
+        id="firstName" 
+        name = "firstName" 
+        placeholder="Enter First name"/>
+    </div>
+    <div class="element-container">
+        <label for="password1">Password</label>
+        <input type="password" 
+        class="input" 
+        id="password1" 
+        name = "password1" 
+        placeholder="Enter password"/>
+    </div>
+    <div class="element-container">
+        <label for="password2">Confirm password</label>
+        <input type="password" 
+        class="input" 
+        id="password2" 
+        name = "password2" 
+        placeholder=""/>
+    </div>
+    <button type="submit" id="submit_btn">SIGNUP</button>
 </div>
 
-<button type="submit" class="submit_btn">Submit</button>
 </form>
 
 {%endblock%}
