--- a/website/static/styles/quiz_maker_style.css
+++ b/website/static/styles/quiz_maker_style.css
@@ -7,3 +7,22 @@
     font-size: 1em;
     margin: 5px;
 }
+
+.submit_btn{
+    height: 2vh;
+    width: 3vw;
+    border: solid rgb(0, 255, 0);
+    background-color: rgb(0, 0, 0);
+    color: rgb(0, 255, 0);
+}
+
+
+
+.question{ 
+    height: max-content;
+    width: max-content; 
+    border: solid rgb(0, 255, 0);
+    border-radius: 4%;
+    margin: 1%;
+    padding: 1%;
+}
