Data is transfered to backend in json format

--- a/website/templates/quizmaker.html
+++ b/website/templates/quizmaker.html
@@ -29,19 +29,17 @@ Quiz Maker
             <br>
             <label class="text2"> Enter Correct option </label> 
             <br>
-            <input class="text2" type="text" id="c1" name="c1"/>
+            <input class="text2" type="text" id="q1_c1" name="q1_c1"/>
             <br>
             <label class="text2"> Enter other options </label><br>
-            <input class="text2" type="text" id="c2" name="c2"/>
+            <input class="text2" type="text" id="q1_c2" name="q1_c2"/>
             <br>
             <br>
-            <input class="text2" type="text" id="c3" name="c3"/>
+            <input class="text2" type="text" id="q1_c3" name="q1_c3"/>
             <br>
             <br>
-            <input class="text2" type="text" id="c4" name="c4"/>
-        </div>
-    </div>
-    
+            <input class="text2" type="text" id="q1_c4" name="q1_c4"/>
+        </div>   
 </div>
 <br>
 
