--- a/website/static/styles/quiz_maker_style.css
+++ b/website/static/styles/quiz_maker_style.css
@@ -26,3 +26,15 @@
     margin: 1%;
     padding: 1%;
 }
+
+
+
+.submit_btn{
+    cursor: pointer;
+}
+
+.ques_container{
+    display: flex;
+    flex-direction: row;
+
+}
