Added multiple question option

--- a/website/templates/quizmaker.html
+++ b/website/templates/quizmaker.html
@@ -40,6 +40,8 @@ Quiz Maker
             <br>
             <input class="text2" type="text" id="q1_c4" name="q1_c4"/>
         </div>   
+
+        <button id="add_que_btn" onclick="add_ques()">+</button>
 </div>
 <br>
 
