Fixed some bugs in quiz_maker

--- a/website/templates/quizmaker.html
+++ b/website/templates/quizmaker.html
@@ -18,27 +18,27 @@ Quiz Maker
     <h1 align = "center"> QUIZ MAKER</h1>
     <br>
     <label class="text1"> Add quiz name   </label> 
-    <input type="text" class="text1"  id="quiz_name" name="quiz_name"/>
+    <input type="text" class="text text1"  id="quiz_name" name="quiz_name"/>
     <br>
     <label class="text1"> Add description </label>
-    <input type="text" class="text1"  id="quiz_desc" name="quiz_desc"/>
+    <input type="text" class="text text1"  id="quiz_desc" name="quiz_desc"/>
     <div class="ques_container">
         <div class="question" id="question1">
             <h3> Question 1 </h3>
-            <input type="text" class="text2" id="question1" name="question1"/>
+            <input type="text" class="text text2" id="question1" name="question1"/>
             <br>
             <label class="text2"> Enter Correct option </label> 
             <br>
-            <input class="text2" type="text" id="q1_c1" name="q1_c1"/>
+            <input class="text text2" type="text" id="q1_c1" name="q1_c1"/>
             <br>
-            <label class="text2"> Enter other options </label><br>
-            <input class="text2" type="text" id="q1_c2" name="q1_c2"/>
-            <br>
-            <br>
-            <input class="text2" type="text" id="q1_c3" name="q1_c3"/>
+            <label class=" text2"> Enter other options </label><br>
+            <input class="text text2" type="text" id="q1_c2" name="q1_c2"/>
             <br>
             <br>
-            <input class="text2" type="text" id="q1_c4" name="q1_c4"/>
+            <input class="text text2" type="text" id="q1_c3" name="q1_c3"/>
+            <br>
+            <br>
+            <input class="text text2" type="text" id="q1_c4" name="q1_c4"/>
         </div>   
 
         <button id="add_que_btn" onclick="add_ques()">+</button>
