--- a/website/templates/test.html
+++ b/website/templates/test.html
@@ -50,6 +50,14 @@ Test
 {%endfor%}
 
 <br>
+
+{% for x in message5 %}
+    {{x.id}}
+    {{x.quiz_id}}
+    {{x.user_id}}
+    {{x.user_score}}
+    <br>
+{%endfor%}
 <br>
 
 
