--- a/website/static/styles/profile.css
+++ b/website/static/styles/profile.css
@@ -67,3 +67,35 @@ ul {
     margin-left: 20%;
 
 }
+
+.upload-container {
+    width: 200px;
+    height: 200px;
+    border: 2px dashed #ccc;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+  }
+
+  .upload-container:hover {
+    border-color: #999;
+  }
+
+  .upload-container span {
+    font-size: 48px;
+    color: #999;
+  }
+
+  #file-input{
+    height: fit-content;
+    width: fit-content;
+    color: transparent;
+    position: absolute;
+    left: 1.5%;
+  }
+
+  #upload_btn{
+    font-size: 1em;
+  }
