--- a/website/templates/profile.html
+++ b/website/templates/profile.html
@@ -22,6 +22,12 @@
 
  {%endif%}
  <br>
+
+ <div class="upload-container">
+    <input type="file" id="file-input">
+    <label for="file" id="upload_btn"> CHOOSE FILE</label>
+  </div>
+
 <div class="container">
 <div class="quiz_container">
     <span class="container_title">QUIZES</span>
