--- a/website/templates/profile.html
+++ b/website/templates/profile.html
@@ -24,7 +24,7 @@
  <br>
 
  <div class="upload-container">
-    <input type="file" id="file-input">
+    <input type="file" id="file-input" name="profile_pic">
     <label for="file" id="upload_btn"> CHOOSE FILE</label>
   </div>
 
