--- a/website/static/styles/quiz_taker.css
+++ b/website/static/styles/quiz_taker.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 .question_box{
     border: solid rgb(0, 255, 0);
     border-radius: 3%;
@@ -6,6 +11,13 @@
     margin: 1%;
     padding: 1%;
 }
+
+.ques_container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .sbmt_btn{
     height: fit-content;
     width: fit-content;
@@ -15,4 +27,56 @@
     align-content: center;
     align-self: center;
     cursor: pointer;
+}
+
+.score_displayer{
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
+    background-color: black;
+    border: solid transparent;
+    border-width: 2.6em;
+}
+
+.modal_container{
+    height: 50vh;
+    width: 30vw;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    background-color: black;
+    border: solid rgb(0, 255, 0);
+}
+
+.score_displayer::backdrop{
+    filter: blur();
+  }
+
+#modal_text{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 2em;
+}
+
+.modal_btn{
+    height: max-content;
+    width: max-content;
+    padding: 2%;
+    background-color: black;
+    border: solid rgb(0, 255, 0);
+    cursor: pointer;
+}
+
+
+.btn_container{
+    position: absolute;
+    left: 25%;
+    top: 80%;
+    width: 15vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
