--- a/website/templates/quiz_taker.html
+++ b/website/templates/quiz_taker.html
@@ -14,6 +14,7 @@ Quiz
 
 
 <form method="post" class="form">
+<div class="ques_container">
 {% for i in range(question_query|length) %}
     {% set question = question_query[i] %}
     <div class="question_box">
@@ -28,8 +29,21 @@ Quiz
         {% endfor %}
     </div>
 {% endfor %}
+</div>
 <button type="submit" class="sbmt_btn">SUBMIT</button>
 </form>
+
+
+</dialog> 
+<dialog class="score_displayer" id="score_display_modal">
+    <div class="modal_container">
+        <span id="modal_text"> Your score: {{user_score}} </span>
+        <div class="btn_container">
+            <button class="modal_btn" id="modal_cont_btn">CONTINUE</button>
+            <button class="modal_btn" id="modal_retake_btn"> RETAKE QUIZ</button>
+        </div>
+    </div>
+</dialog>
 {%endblock%}
 
 
