CSSed Home page

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -32,6 +32,10 @@
                 <a class="nav-item nav-link" id="delete" href="/delete">Delete</a>
               </p>
             </div>
+            <div class="user_profile">
+              <span id="profile_name">{{user.first_name}}</span>
+              <button id="profile_btn"></button>
+            </div>
         </nav>
         <hr style="margin-bottom: 2vh;"/>
       
