--- a/website/static/styles/base.css
+++ b/website/static/styles/base.css
@@ -6,7 +6,6 @@
 
 body{
     background-color: rgb(0, 0, 0);
-    background-image: url("Pictures/base_background");
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -17,7 +16,10 @@ body{
     background-color: rgb(0, 0, 0);
     height: 7vh;
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
+
 }
 
 
@@ -33,5 +35,26 @@ body{
 }
 a{
     text-decoration: none;
+}
+
+.user_profile{
+    width: 8vw;
+    padding: 1%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#profile_name{
+    margin: 0.5%;
+}
+
+#profile_btn{
+    height: 2vh;
+    width: 2vw;
+    margin: 10%;
+    background-color: black;
+    border: 0.2em solid rgb(0, 255, 0);
 }
 
