--- a/website/static/styles/profile.css
+++ b/website/static/styles/profile.css
@@ -37,26 +37,24 @@ ul {
     padding: 2%;
 }
 
-/* .container{
-    display: flex;
-    flex-direction: row;
-} */
-
-
-
 .quiz_container{
-    border: solid rgb(0, 255, 0);
-    border-radius: 2%;
-    width: 20vw;
-    display: flex;
-    flex-direction: column;
+  position: absolute;
+  left: 35%;
+  top: 15%;
+  border: solid rgb(0, 255, 0);
+  border-radius: 2%;
+  width: 20vw;
+  display: flex;
+  flex-direction: column;
 }
 
 .quiz_taken{
-    width: 20vw;
-    padding: 1%;
-    margin: 1%;
-    border: solid rgb(0, 255, 0);
+  position: absolute;
+  left: 75%;
+  top: 15%;
+  width: 20vw;
+  padding: 1%;
+  border: solid rgb(0, 255, 0);
 }
 
 .text1{
@@ -69,9 +67,12 @@ ul {
 }
 
 .upload-container {
-    width: 200px;
-    height: 200px;
-    border: 2px dashed #ccc;
+  position: absolute;
+  left: 3%;
+  top: 15%;
+    width: 10vw;
+    height: 20vh;
+    border: 2px dashed rgb(0, 255, 0);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -86,6 +87,12 @@ ul {
   .upload-container span {
     font-size: 48px;
     color: #999;
+  }
+
+  #user_name{
+    position: absolute;
+    left: 6%;
+    top: 38%;
   }
 
   #file-input{
