Still figuring out the button, made separate files for different profiles

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -34,7 +34,7 @@
             </div>
             <div class="user_profile">
               <span id="profile_name">{{user.first_name}}</span>
-              <button id="profile_btn"></button>
+              <button id="profile_btn" onclick="/profile/my_profile"></button>
             </div>
         </nav>
         <hr style="margin-bottom: 2vh;"/>
