--- a/website/templates/profile.html
+++ b/website/templates/profile.html
@@ -15,16 +15,10 @@
 {%block content%}
 
 
- 
+ <form method="post">
  <div class="upload-container">
-    
-    <button id="upload_btn">
-        <input type="file" id="file-input" name="profile_pic">
-    </button>
-    <span id="upload_plus_sign"> +</span>
-    <!-- <label for="file" id="upload_btn"> CHOOSE FILE</label> -->
   </div>
-  
+</form>
   {%if user.first_name%}
   <span id="user_name"> {{user.first_name}}</span>
 {%else%}
