--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -50,6 +50,10 @@
     {% block content%}
     {%endblock%}
     </div>
+    <div class="bonus">
+      <span class="delta" id="span1">Made with</span>
+      <span class="delta" id="span2"> ♥</span>
+    </div>
     
     {%block script%}
     
