--- a/website/templates/test.html
+++ b/website/templates/test.html
@@ -15,12 +15,11 @@ Test
 {{message3}}
 {{message4}} -->
 
-<!-- {% for x in message1 %}
+{% for x in message1 %}
     {{x.id}}
     {{x.first_name}}
     {{x.email}}
-    {{x.password}}
-{%endfor%} -->
+{%endfor%}
 <br>
 
 {% for x in message2 %}
