I think the profile picture thing works now

--- a/website/static/styles/base.css
+++ b/website/static/styles/base.css
@@ -58,3 +58,18 @@ a{
     border: 0.2em solid rgb(0, 255, 0);
 }
 
+.bonus{
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translate(-50%);
+    margin: 2%;
+}
+
+.delta{
+    font-size: 1.2em;
+}
+
+#span2{
+    color: red;
+}
