--- a/website/static/styles/profile.css
+++ b/website/static/styles/profile.css
@@ -71,9 +71,11 @@ ul {
   left: 3%;
   top: 15%;
   overflow: hidden;
+  
     width: 10vw;
     height: 20vh;
     border: 2px dashed rgb(0, 255, 0);
+    border-radius: 4%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -97,10 +99,7 @@ ul {
     top: 38%;
   }
 
-  /* #file-input{
-    width: 3vw;
-    height: 2vh;
-  } */
+
   #upload_plus_sign{
     position: absolute;
     pointer-events: none;
@@ -122,7 +121,7 @@ ul {
   .upload_modal{
     height: 100vh;
     width: 100vw;
-    background-color: black;
+      background-color: black;
     position: absolute;
     left: 50%;
     top: 50%;
@@ -156,4 +155,11 @@ ul {
     height: 30vh;
     width: 20vw;
     opacity: 0;
+  }
+
+  #profile_pic{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
