--- a/Project/website/templates/home.html
+++ b/Project/website/templates/home.html
@@ -27,18 +27,22 @@ HOME
     {%endif%}
 </div>
 
-<div class="frnd_req_container">
-    <h2 align="center"> FRIEND REQUESTS</h2>
+
     {%if frnd_req_list%}
+    <div class="frnd_req_container">
+        <h1 align="center"> FRIEND REQUESTS</h2>
         {%for x in frnd_req_list%}
         <div class="frnd_req_list">
-            <span>{{x.sender_user}}</span>
-            <button class="frnd_req_btn" onclick="frnd_req(1,'{{x.sender_user}}')">ACCEPT</button>
-            <button class="frnd_req_btn" onclick="frnd_req(0,'{{x.sender_user}}')">REJECT</button>
+            <span class="req_sender">{{x.sender_user}}</span>
+            <div class="buttons">
+                <button class="frnd_req_btn" onclick="frnd_req(1,'{{x.sender_user}}')">✔</button>
+                <button class="frnd_req_btn" onclick="frnd_req(0,'{{x.sender_user}}')">❌</button>
+            </div>
         </div>
         {%endfor%}
+    </div>
     {%endif%}
-</div>
+
 
 {%endblock%}
 
