--- a/Project/website/templates/base.html
+++ b/Project/website/templates/base.html
@@ -20,16 +20,16 @@
             <div class="link_container">
               <p>
               {% if user.is_authenticated %}
-              <a class="nav-item nav-link" id="home" href="/">HOME</a>
-              <a class="nav-item nav-link" id="logout" href="/logout">LOGOUT</a>
+              <a class="nav-item" id="home" href="/">HOME</a>
+              <a class="nav-item" id="logout" href="/logout">LOGOUT</a>
               <a class="nav-item" id="quizmaker" href="/quizmaker">MAKE QUIZ</a>
-              <a class="nav-item nav-link" id="profile" href="/profile/my_profile">My profile</a>
+              <a class="nav-item " id="profile" href="/profile/my_profile">My profile</a>
                 {%else%}
-                <a class="nav-item nav-link" id="login" href="/login">LOGIN</a>
-                <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
+                <a class="nav-item" id="login" href="/login">LOGIN</a>
+                <a class="nav-item" id="signUp" href="/sign-up">Sign Up</a>
                 {%endif%}
-                <a class="nav-item nav-link" id="test" href="/test">Show files</a>
-                <a class="nav-item nav-link" id="delete" href="/delete">Delete</a>
+                <a class="nav-item" id="test" href="/test">Show files</a>
+                <a class="nav-item" id="delete" href="/delete">Delete</a>
               </p>
             </div>
             <div class="user_profile">
